# grapheq

./: CMakeLists.txt  README.md  justfile
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
